feat: dto검증 추가 및 평점 변경 기능 구현